--- a/src/app/components/atoms/form/form.component.html
+++ b/src/app/components/atoms/form/form.component.html
@@ -1,19 +1,21 @@
 <form [formGroup]="row.formGroup" (input)="inputOut.emit(row)">
   @for (indicator of sort(); track indicator) {
-    <mat-form-field class="mat-form-field">
-      <mat-label i18n>{{ indicator }}</mat-label>
-      <input #inputElementRef [type]="indicator" matInput formControlName="{{ indicator }}" />
-      @if (inputElementRef.value && !row.formGroup.disabled) {
-        <button
-          type="button"
-          matSuffix
-          mat-icon-button
-          i18n-aria-label
-          aria-label="Clear input"
-          (click)="onClick(inputElementRef)">
-          <mat-icon>close</mat-icon>
-        </button>
-      }
-    </mat-form-field>
+    @if (indicator !== 'Position') {
+      <mat-form-field class="mat-form-field">
+        <mat-label i18n>{{ indicator }}</mat-label>
+        <input #inputElementRef [type]="indicator" matInput formControlName="{{ indicator }}" />
+        @if (inputElementRef.value && !row.formGroup.disabled) {
+          <button
+            type="button"
+            matSuffix
+            mat-icon-button
+            i18n-aria-label
+            aria-label="Clear input"
+            (click)="onClick(inputElementRef)">
+            <mat-icon>close</mat-icon>
+          </button>
+        }
+      </mat-form-field>
+    }
   }
 </form>
