--- a/src/app/components/atoms/table/table.component.html
+++ b/src/app/components/atoms/table/table.component.html
@@ -1,8 +1,8 @@
-@if (dataSource.length > 0) {
-  <table mat-table [dataSource]="dataSource">
+@if (dataSource.sortData.length > 0) {
+  <table mat-table [dataSource]="dataSource" matSort>
     @for (column of columns; track column) {
       <ng-container [matColumnDef]="column">
-        <th mat-header-cell *matHeaderCellDef>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
           {{ column }}
         </th>
         <td mat-cell *matCellDef="let fractal">
@@ -14,10 +14,9 @@
     <tr
       mat-row
       *matRowDef="let fractal; columns: columns"
-      appClick
-      [activateOnHold]="true"
-      (onHold)="this.outHold.emit(fractal)"
-      (onClick)="this.outClick.emit(fractal)"
+      appEvent
+      (tapOut)="this.onRowTapOut.emit(fractal)"
+      (holdDoneOut)="this.onRowHoldDoneOut.emit(fractal)"
       [class.row-is-clicked]="rows.includes(fractal)"></tr>
   </table>
 }
