--- a/src/app/components/organisms/page/page.component.html
+++ b/src/app/components/organisms/page/page.component.html
@@ -1,12 +1,16 @@
 @if (fs.page.signal(); as page) {
   @if (Modifier) {
-    <app-modifier [sort]="page.split('Sort')" [rows]="fs.rows.signal()" />
+    <app-modifier [sort]="page.sort()" [rows]="fs.rows.signal()" />
   } @else {
-    <app-table
-      [rows]="fs.rows.signal()"
-      [columns]="page.split('Sort')"
-      [dataSource]="page.list()"
-      (outHold)="onRowHold()"
-      (outClick)="onRowClick($event)" />
+    @if (Pages === 'Home') {
+      <h1>Home</h1>
+    } @else {
+      <app-table
+        [rows]="fs.rows.signal()"
+        [columns]="page.sort()"
+        [dataSource]="page.list()"
+        (onRowTapOut)="onRowTapOut($event)"
+        (onRowHoldDoneOut)="onRowHoldDoneOut()" />
+    }
   }
 }
