--- a/src/app/components/atoms/input/input.component.html
+++ b/src/app/components/atoms/input/input.component.html
@@ -4,6 +4,7 @@
   @if (control.value && clearButton) {
     <button
       type="button"
+      class="clear-button"
       matSuffix
       mat-icon-button
       i18n-aria-label
