--- a/src/app/components/atoms/tap/tap.component.html
+++ b/src/app/components/atoms/tap/tap.component.html
@@ -6,8 +6,8 @@
     [rows]="fs.rows.signal()"
     [formGroupChanges]="fs.formGroupChanges()"
     appEvent
-    (tapOut)="onTapTapOut.emit(tap)"
-    (holdDoneOut)="onTapHoldDoneOut.emit(tap)">
+    (hold)="hold.emit(tap)"
+    (touch)="touch.emit(tap)">
     <mat-icon>{{ tap.data('Icon') }}</mat-icon>
     <ng-content select="[before-tap-name]"></ng-content> {{ tap.cursor }}
   </button>
