--- a/src/app/components/organisms/page/page.component.html
+++ b/src/app/components/organisms/page/page.component.html
@@ -9,8 +9,8 @@
         [rows]="fs.rows.signal()"
         [columns]="page.sort()"
         [dataSource]="page.list()"
-        (onRowTapOut)="onRowTapOut($event)"
-        (onRowHoldDoneOut)="onRowHoldDoneOut()" />
+        (hold)="hold()"
+        (touch)="touch($event)" />
     }
   }
 }
