--- a/src/app/components/molecules/sidenav-taps/sidenav-taps.component.html
+++ b/src/app/components/molecules/sidenav-taps/sidenav-taps.component.html
@@ -1,4 +1,4 @@
-<mat-list cdkDropList (cdkDropListDropped)="drop($event)">
+<mat-list cdkDropList (cdkDropListDropped)="es.drop(fs.taps.signal(), $event)">
   @if (fs.taps.signal(); as taps) {
     @for (indicator of taps.sort(); track indicator) {
       @if (taps.find(indicator); as tap) {
