add drop and drag

--- a/src/app/components/atoms/table/table.component.html
+++ b/src/app/components/atoms/table/table.component.html
@@ -1,28 +1,69 @@
 @if (dataSource.sortData.length > 0) {
-  <table
-    mat-table
+  <ng-container *ngTemplateOutlet="true ? dropRowsTable : dropHeadersTable" />
+}
+
+@if (dataSource.sortData.length > 0) {
+  <ng-container *ngTemplateOutlet="false ? dropRowsTable : dropHeadersTable" />
+}
+
+<ng-template #dropHeadersTable>
+  <mat-table
     [dataSource]="dataSource"
     matSort
     cdkDropList
+    [cdkDropListDisabled]="false"
     cdkDropListOrientation="horizontal"
-    (cdkDropListDropped)="drop.emit($event)">
+    (cdkDropListDropped)="dropHeaders.emit($event)">
     @for (column of columns; track column) {
       <ng-container [matColumnDef]="column">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag>
+        <mat-header-cell *matHeaderCellDef mat-sort-header cdkDrag cdkDragLockAxis="x">
           {{ column }}
-        </th>
-        <td mat-cell *matCellDef="let fractal">
+        </mat-header-cell>
+        <mat-cell *matCellDef="let fractal">
           {{ fractal.data(column) }}
-        </td>
+        </mat-cell>
       </ng-container>
     }
-    <tr mat-header-row *matHeaderRowDef="columns"></tr>
-    <tr
+    <mat-header-row *matHeaderRowDef="columns" />
+    <mat-row
       mat-row
       *matRowDef="let fractal; columns: columns"
       appEvent
       (hold)="this.hold.emit(fractal)"
       (touch)="this.touch.emit(fractal)"
-      [class.row-is-clicked]="rows.includes(fractal)"></tr>
-  </table>
-}
+      [class.row-is-clicked]="rows.includes(fractal)" />
+  </mat-table>
+</ng-template>
+
+<ng-template #dropRowsTable>
+  <mat-table
+    #table
+    [dataSource]="dataSource"
+    matSort
+    appDragTable
+    cdkDropList
+    cdkDropListData="dataSource"
+    [cdkDropListDisabled]="false"
+    (cdkDropListDropped)="dropRows.emit($event)">
+    @for (column of columns; track column) {
+      <ng-container [matColumnDef]="column">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ column }}
+        </mat-header-cell>
+        <mat-cell *matCellDef="let fractal">
+          {{ fractal.data(column) }}
+        </mat-cell>
+      </ng-container>
+    }
+    <mat-header-row *matHeaderRowDef="columns" />
+    <mat-row
+      cdkDrag
+      cdkDragLockAxis="y"
+      [cdkDragData]="row"
+      *matRowDef="let row; columns: columns"
+      appEvent
+      (hold)="this.hold.emit(row)"
+      (touch)="this.touch.emit(row)"
+      [class.row-is-clicked]="rows.includes(row)" />
+  </mat-table>
+</ng-template>
