--- a/src/app/components/molecules/toolbar/toolbar.component.html
+++ b/src/app/components/molecules/toolbar/toolbar.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar color="primary" class="toolbar">
-  <app-manager />
+<mat-toolbar class="toolbar drag-boundary" color="primary">
+  <app-manager cdkDrag cdkDragLockAxis="x" cdkDragBoundary=".drag-boundary" />
 </mat-toolbar>
