--- a/src/app/components/molecules/manager/manager.component.html
+++ b/src/app/components/molecules/manager/manager.component.html
@@ -1,9 +1,7 @@
 @if (this.fs.manager(); as manager) {
-  <button mat-mini-fab appEvent (touch)="onManagerTapOut()" (hold)="onManagerStopHoldOut()">
+  <button mat-mini-fab appEvent (touch)="touch()" (hold)="hold()">
     @if (switcher$ | async) {
       <app-spinner class="manager-spinner" mode="determinate" />
-    } @else {
-      <mat-icon class="show">{{ manager.data('Icon') }}</mat-icon>
     }
   </button>
 }
