--- a/src/app/components/molecules/sidenav-taps/sidenav-taps.component.html
+++ b/src/app/components/molecules/sidenav-taps/sidenav-taps.component.html
@@ -2,7 +2,13 @@
   @if (fs.taps.signal(); as taps) {
     @for (indicator of taps.sort(); track indicator) {
       @if (taps.find(indicator); as tap) {
-        <app-tap class="tap" cdkDrag [tap]="tap" (hold)="hold($event)" (touch)="touch($event)" />
+        <app-tap
+          class="tap"
+          cdkDrag
+          cdkDragLockAxis="y"
+          [tap]="tap"
+          (hold)="hold($event)"
+          (touch)="touch($event)" />
       }
     }
   }
