--- a/src/app/components/molecules/manager/manager.component.html
+++ b/src/app/components/molecules/manager/manager.component.html
@@ -1,4 +1,4 @@
-@if (this.fs.manager(); as manager) {
+@if (fs.manager(); as manager) {
   <button mat-mini-fab appEvent (touch)="touch()" (hold)="hold()">
     @if (switcher$ | async) {
       <app-spinner class="manager-spinner" mode="determinate" />
