--- a/src/app/components/organisms/sidenav/sidenav.component.html
+++ b/src/app/components/organisms/sidenav/sidenav.component.html
@@ -4,7 +4,7 @@
     [disableClose]="false"
     class="mat-drawer-app-sidenav"
     mode="side"
-    position="end">
+    position="start">
     <app-sidenav-taps></app-sidenav-taps>
   </mat-drawer>
   <router-outlet></router-outlet>
