--- a/src/app/components/atoms/tap/tap.component.html
+++ b/src/app/components/atoms/tap/tap.component.html
@@ -1,14 +1,13 @@
-@if (tap(); as tap) {
-  <button
-    mat-flat-button
-    appTapsActivation
-    [tap]="tap"
-    [rows]="fs.rows.signal()"
-    [formGroupChanges]="fs.formGroupChanges()"
-    appEvent
-    (hold)="hold.emit(tap)"
-    (touch)="touch.emit(tap)">
-    <mat-icon>{{ tap.data('Icon') }}</mat-icon>
-    <ng-content select="[before-tap-name]"></ng-content> {{ tap.cursor }}
-  </button>
-}
+<button
+  [disabled]="disabled"
+  mat-flat-button
+  appTapsActivation
+  [tap]="tap"
+  [rows]="fs.rows.signal()"
+  [formGroupChanges]="fs.formGroupChanges()"
+  appEvent
+  (hold)="hold.emit(tap)"
+  (touch)="touch.emit(tap)">
+  <mat-icon>{{ tap.data('Icon') }}</mat-icon>
+  <ng-content select="[before-tap-name]"></ng-content>{{ tap.cursor }}
+</button>
