--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,6 +15,6 @@ ul {
 }
 
 * {
-  -webkit-tap-highlight-color: transparent; /* Chrome, Safari, etc. */
-  -webkit-touch-callout: none; /* Disable long-press menus */
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
 }
