delete event directive

--- a/src/app/components/atoms/table/table.component.html
+++ b/src/app/components/atoms/table/table.component.html
@@ -24,7 +24,7 @@
     <mat-row
       mat-row
       *matRowDef="let row; columns: columns"
-      appEvent
+      appTap
       (hold)="this.hold.emit(row)"
       (touch)="this.touch.emit(row)"
       [class.row-is-clicked]="rows.includes(row)" />
@@ -55,7 +55,7 @@
       cdkDragLockAxis="y"
       [cdkDragData]="row"
       *matRowDef="let row; columns: columns"
-      appEvent
+      appTap
       (hold)="this.hold.emit(row)"
       (touch)="this.touch.emit(row)"
       [class.row-is-clicked]="rows.includes(row)" />
