--- a/src/app/components/molecules/manager/manager.component.html
+++ b/src/app/components/molecules/manager/manager.component.html
@@ -1,5 +1,5 @@
 @if (fs.manager(); as manager) {
-  <button mat-mini-fab appEvent (touch)="touch()" (hold)="hold()">
+  <button mat-mini-fab appTap (touch)="touch()" (hold)="hold()">
     @if (switcher$ | async) {
       <app-spinner class="manager-spinner" mode="determinate" />
     }
