--- a/src/app/components/molecules/settings/button/settings-button.component.html
+++ b/src/app/components/molecules/settings/button/settings-button.component.html
@@ -1,3 +1,3 @@
-<button class="icon-button" mat-icon-button (click)="open()">
-  <mat-icon>{{ icon }}</mat-icon>
-</button>
+<!-- <button class="icon-button" mat-icon-button appTap (hold)="hold()" (touch)="touch()">
+  <mat-icon>{{ fractal.data('Icon') }}</mat-icon>
+</button> -->
