--- a/src/app/components/atoms/tap/tap.component.html
+++ b/src/app/components/atoms/tap/tap.component.html
@@ -1,4 +1,10 @@
-<button mat-flat-button appTap [tap]="tap" (hold)="hold.emit(tap)" (touch)="touch.emit(tap)">
+<button
+  mat-flat-button
+  appTap
+  [tap]="tap"
+  [disabled]="disabled"
+  (hold)="hold.emit(tap)"
+  (touch)="touch.emit(tap)">
   <mat-icon>{{ tap.data('Icon') }}</mat-icon>
   <ng-content select="[before-tap-name]"></ng-content>{{ tap.cursor }}
 </button>
