--- a/src/app/components/organisms/modifier/modifier.component.scss
+++ b/src/app/components/organisms/modifier/modifier.component.scss
@@ -1,5 +1,21 @@
 @use 'variables.scss' as *;
 
+.Touched,
+.Untouched {
+  color: $color-common;
+  padding: 0 $size-medium;
+  border-radius: $size-extra-small;
+  margin-bottom: $size-extra-small;
+}
+
+.Touched {
+  background-color: $color-success;
+}
+
+.Untouched {
+  background-color: $color-warning;
+}
+
 .list {
   display: flex;
   flex-wrap: wrap;
