--- a/src/app/components/atoms/list/list.component.html
+++ b/src/app/components/atoms/list/list.component.html
@@ -3,14 +3,14 @@
   [dataSource]="dataSource"
   cdkDropList
   cdkDropListOrientation="horizontal"
-  (cdkDropListDropped)="columnChanged.emit($event)">
+  (cdkDropListDropped)="columnsChanged.emit($event)">
   @for (column of columns; track $index) {
     <ng-container [matColumnDef]="column">
       <th mat-header-cell cdkDrag *matHeaderCellDef>{{ column }}</th>
       <td mat-cell *matCellDef="let row">{{ row.getFormControl(column)?.value }}</td>
     </ng-container>
   }
-  <tr mat-header-row *matHeaderRowDef="columns"></tr>
+  <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
   <tr
     mat-row
     *matRowDef="let row; columns: columns"
